crates/brasa_errorset/tests/snapshots/errorset__generic_apply_is_open_at_definition_and_call_site.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  boomIf -> {AppError}
  apply -> {} (open)
  useApply -> {} (open)
lambda error sets
  e13 -> {AppError}
