crates/brasa_errorset/tests/snapshots/errorset__guard_calling_throwing_function_contributes.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  risky -> {NetError}
  noisy -> {GuardError}
  guarded -> {NetError, GuardError}
