crates/brasa_errorset/tests/snapshots/errorset__hof_lambda_throws_and_calls_throwing_function.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  fail -> {NamedError}
  both -> {LambdaError, NamedError}
lambda error sets
  e16 -> {LambdaError, NamedError}
