crates/brasa_errorset/tests/snapshots/errorset__hof_receiver_built_from_throwing_call.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  build -> {BuildError}
  bumpBuilt -> {BuildError}
lambda error sets
  e14 -> {}
