crates/brasa_errorset/tests/snapshots/errorset__json_parse_tags_and_subtraction.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  decode -> {json.ParseError}
  decoded -> {}
  echo -> {}
