crates/brasa_errorset/tests/snapshots/errorset__lambdas_and_indirect_calls.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  bump -> {MapError}
  bumpAll -> {MapError}
  applyTwice -> {} (open)
lambda error sets
  e13 -> {MapError}
