crates/brasa_errorset/tests/snapshots/errorset__mutual_recursion_converges.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  alpha -> {AlphaError, BetaError}
  beta -> {AlphaError, BetaError}
