crates/brasa_errorset/tests/snapshots/errorset__native_parse_error_tags_and_subtraction.snap
---
source: crates/brasa_errorset/tests/errorset.rs
expression: dump
---
error sets
  parse -> {Boom, string.ParseError}
  lenient -> {}
  strict -> {}
  wildcarded -> {}
